# rag-practice

./: .gitignore  02-embedding.py  03-chroma.py  04-simple-rag.py  05-simple-multimodal-rag.py  main.py  pyproject.toml
