[project]
name = "rag-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.18.11",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B", "C", "N", "S", "UP"]
ignore = ["F401"]
